--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +40,31 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 380px;
+  padding: 20px 10px;
+  margin: auto;
+  border-radius: 25px;
+  box-shadow: 0 3px 6px 0 #555;
+  background: rgb(219, 219, 219);
+}
+
+.appLabel {
+  color: black;
+  margin: 20px auto;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.closeButton {
+  padding: 2px 3px;
+  background-color: black;
+  border-radius: 50%;
+  color: white;
+  position: absolute;
 }
