--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,146 @@
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background: linear-gradient( #04263E,#0d1981);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* CSS Aplication */
+/* City component */
+.searchBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 20px;
+  border: black solid 1px;
+  border-radius: 2px;
+
+  & input {
+    padding: 10px;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    font-weight: bold;
+  }
+  & button {
+    background-color: black;
+    font-size: 14px;
+    padding: 0 10px;
+    color: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-weight: bold;
+  }
+}
+
+.chooseCityLabel {
+  color: black;
+  margin: 10px auto;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.welcomeWeatherLogo {
+  width: 200px;
+  margin: 20px auto;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .welcomeWeatherLogo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* Weather component */
+.location {
+  margin: 15px auto;
+  text-transform: capitalize;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.condition {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin: 20px auto;
+  text-transform: capitalize;
+  font-size: 20px;
+  font-weight: 500;
+  & span {
+    font-size: 30px;
+  }
+}
+
+.weatherInfoLabel {
+  margin: 20px 25px 10px;
+  text-transform: capitalize;
+  text-align: start;
+  width: 90%;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.weatherIcon {
+  width: 100px;
+  height: 100px;
+  margin: 5px auto;
+}
+
+.weatherContainer {
+  display: flex;
+  width: 100%;
+  margin: 30px auto;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.weatherInfoContainer {
+  display: flex;
+  width: 90%;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.infoContainer {
+  display: flex;
+  margin: 5px 10px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.infoIcon {
+  width: 36px;
+  height: 36px;
+}
+
+.infoLabel {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  margin: 15px;
+  & span {
+    font-size: 12px;
+    text-transform: capitalize;
+  }
 }
