--- a/src/index.css
+++ b/src/index.css
@@ -28,16 +28,58 @@ body {
     font-weight: bold;
   }
   & button {
-    background-color: black;
-    font-size: 14px;
-    padding: 0 10px;
-    color: white;
+    background-color: #04263E;
     border: none;
     outline: none;
     cursor: pointer;
-    font-weight: bold;
+    text-align: center;
+    color: white;
+    & img {
+      width: 25%;
+    }
   }
 }
+
+button {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+button:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #0d1981;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 100% 50%;
+  transform-origin: 100% 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+button:hover, button:focus, button:active {
+  color: white;
+}
+button:hover:before, button:focus:before, button:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
 
 .chooseCityLabel {
   color: black;
@@ -65,6 +107,8 @@ body {
     transform: rotate(360deg);
   }
 }
+
+
 
 /* Weather component */
 .location {
