--- a/src/index.css
+++ b/src/index.css
@@ -19,25 +19,27 @@ body {
   margin: 20px;
   border: black solid 1px;
   border-radius: 2px;
+}
 
-  & input {
-    padding: 10px;
-    font-size: 14px;
-    border: none;
-    outline: none;
-    font-weight: bold;
-  }
-  & button {
-    background-color: #04263E;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    text-align: center;
-    color: white;
-    & img {
-      width: 25%;
-    }
-  }
+.searchBox input {
+  padding: 10px;
+  font-size: 14px;
+  border: none;
+  outline: none;
+  font-weight: bold;
+}
+
+.searchBox button {
+  background-color: #04263E;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  color: white;
+}
+
+.searchBox button img {
+  width: 25%;
 }
 
 button {
